# masa

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  approval.py  clause.py  ingestion.py  negotiation.py  orchestrator.py  risk.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  approvals.py  contracts.py  reviews.py
backend/app/core/: __init__.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  clause.py  contract.py
backend/app/services/: __init__.py  document_parser.py  rag_service.py  rule_engine.py  storage.py
backend/tests/: test_main.py
data/playbooks/: .gitkeep
data/sample_contracts/: .gitkeep
docker/: docker-compose.yml
docs/: .gitkeep
